--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
+botocore==1.9.16
 certifi==2018.1.18
 chardet==3.0.4
 click==6.7
+docutils==0.14
 Flask==0.12
 idna==2.6
 itsdangerous==0.24
 Jinja2==2.9.3
+jmespath==0.9.3
 MarkupSafe==0.23
+python-dateutil==2.6.1
 requests==2.18.4
+six==1.11.0
 urllib3==1.22
 virtualenv==15.1.0
 Werkzeug==0.11.15
