--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+boto3==1.6.16
 botocore==1.9.16
 certifi==2018.1.18
 chardet==3.0.4
@@ -11,6 +12,7 @@ jmespath==0.9.3
 MarkupSafe==0.23
 python-dateutil==2.6.1
 requests==2.18.4
+s3transfer==0.1.13
 six==1.11.0
 urllib3==1.22
 virtualenv==15.1.0
