--- a/.ebextensions/application.config
+++ b/.ebextensions/application.config
@@ -1,3 +1,7 @@
 option_settings:
   aws:elasticbeanstalk:container:python:
     WSGIPath: helloworld/application.py
+commands:
+  01_setuptools_install:
+    command: './pip install setuptools==39.0.1'
+    cwd: /opt/python/run/venv/bin
