--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     commands:
       # Discover and run unit tests. For more information, see <https://docs.pytest.org/en/latest/goodpractices.html>
       - export PYTHONPATH=. 
-      - python setup.py pytest
+      #- python3 setup.py pytest
 
 artifacts:
   type: zip
